// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchImageSnapshot dumpDiffToConsole imgSrcString is added to console message when dumpDiffToConsole is true 2`] = `
"Expected image to match or be a close match to snapshot but was 80% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m
[1m[31mOr paste below image diff string to your browser\`s URL bar.[39m[22m
 pretendthisisanimagebase64string"
`;

exports[`toMatchImageSnapshot dumpDiffToConsole imgSrcString is not added to console by default 2`] = `
"Expected image to match or be a close match to snapshot but was 0% different from snapshot (0 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m"
`;

exports[`toMatchImageSnapshot dumpInlineDiffToConsole falls back to dumpDiffToConsole if the terminal is unsupported 2`] = `
"Expected image to match or be a close match to snapshot but was 80% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m
[1m[31mOr paste below image diff string to your browser\`s URL bar.[39m[22m
 pretendthisisanimagebase64string"
`;

exports[`toMatchImageSnapshot dumpInlineDiffToConsole uses Inline Image Protocol in iTerm 2`] = `
"Expected image to match or be a close match to snapshot but was 80% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m

	]1337;File=name=cGF0aC90by9yZXN1bHQucG5n;inline=1;width=40:pretendthisisanimagebase64string

"
`;

exports[`toMatchImageSnapshot dumpInlineDiffToConsole uses Inline Image Protocol when ENABLE_INLINE_DIFF is set 2`] = `
"Expected image to match or be a close match to snapshot but was 80% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m

	]1337;File=name=cGF0aC90by9yZXN1bHQucG5n;inline=1;width=40:pretendthisisanimagebase64string

"
`;

exports[`toMatchImageSnapshot passes diffImageToSnapshot everything it needs to create a snapshot and compare if needed 1`] = `
Object {
  "allowSizeMismatch": false,
  "blur": 0,
  "comparisonMethod": "pixelmatch",
  "customDiffConfig": Object {},
  "diffDir": "path/to/__image_snapshots__/__diff_output__",
  "diffDirection": "horizontal",
  "failureThreshold": 0,
  "failureThresholdType": "pixel",
  "receivedImageBuffer": "pretendthisisanimagebuffer",
  "snapshotIdentifier": "test-spec-js-test-1",
  "snapshotsDir": "path/to/__image_snapshots__",
  "updatePassedSnapshot": false,
  "updateSnapshot": false,
}
`;

exports[`toMatchImageSnapshot should fail when snapshot has a difference beyond allowed threshold 2`] = `
"Expected image to match or be a close match to snapshot but was 80% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m"
`;

exports[`toMatchImageSnapshot should not style error message if colors not supported  2`] = `
"Expected image to match or be a close match to snapshot but was 40% different from snapshot (600 differing pixels).
See diff for details: path/to/result.png"
`;

exports[`toMatchImageSnapshot should style error message if colors supported  2`] = `
"Expected image to match or be a close match to snapshot but was 40% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m"
`;

exports[`toMatchImageSnapshot should throw an error if used with .not matcher 1`] = `"Jest: \`.not\` cannot be used with \`.toMatchImageSnapshot()\`."`;

exports[`toMatchImageSnapshot should use noColors options if passed as false and style error message 2`] = `
"Expected image to match or be a close match to snapshot but was 40% different from snapshot (600 differing pixels).
[1m[31mSee diff for details:[39m[22m [31mpath/to/result.png[39m"
`;

exports[`toMatchImageSnapshot should use noColors options if passed as true and not style error message 2`] = `
"Expected image to match or be a close match to snapshot but was 40% different from snapshot (600 differing pixels).
See diff for details: path/to/result.png"
`;

exports[`toMatchImageSnapshot when retryTimes is set should throw an error when called without customSnapshotIdentifier 2`] = `"A unique customSnapshotIdentifier must be set when jest.retryTimes() is used"`;

exports[`toMatchImageSnapshot when retryTimes is set should throw an error when called without customSnapshotIdentifier 4`] = `"A unique customSnapshotIdentifier must be set when jest.retryTimes() is used"`;
